fix(dice): better layout on mobile

--- a/src/components/DiceRoll/DiceSeletion/DiceBag.module.css
+++ b/src/components/DiceRoll/DiceSeletion/DiceBag.module.css
@@ -1,6 +1,12 @@
+.header {
+	margin-bottom: var(--spacing);
+
+	&.disabled {
+		color: var(--disabled);
+	}
+}
+
 .diceButton {
-	width: 40px;
-	height: 40px;
 	border: none;
 	background: none;
 	cursor: pointer;
